<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/slide1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="6dp"
        />

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/slide2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:elevation="6dp"
        app:area_margin="12dp"
        app:text="AREA MARGIN" />

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/slide3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:elevation="6dp"
        app:border_radius="10dp"
        app:text="BORDER RADIUS" />

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/slide4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:elevation="6dp"
        app:border_radius="0dp"
        app:text="BORDER RADIUS 2" />
</LinearLayout>